[gd_scene load_steps=34 format=3 uid="uid://dyu40iyjut0ht"]

[ext_resource type="Script" uid="uid://drpd5ypjrw67y" path="res://player.gd" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://bnfbc7u202bvo" path="res://main.gd" id="1_7mycd"]
[ext_resource type="Texture2D" uid="uid://d3qu1bea31e07" path="res://icon.svg" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://dukslok5fus07" path="res://hotbar.png" id="4_1bvp3"]
[ext_resource type="Script" uid="uid://cngg15t1lim6i" path="res://stove.gd" id="4_5vw27"]
[ext_resource type="Script" uid="uid://dcala8j2gjs5n" path="res://reservoir.gd" id="5_272bh"]
[ext_resource type="Texture2D" uid="uid://c6e40ojmlanye" path="res://Assets/PotRice.png" id="5_getpj"]
[ext_resource type="Shader" uid="uid://day38ouyppi2j" path="res://recolor.gdshader" id="5_lquwl"]
[ext_resource type="Script" uid="uid://ccjws5hie7otm" path="res://cuttingBoard.gd" id="6_4c57u"]
[ext_resource type="Texture2D" uid="uid://bwwfets07ip47" path="res://Assets/ClosedRice.png" id="6_ryguw"]
[ext_resource type="Texture2D" uid="uid://ddm5dgso2owdt" path="res://Assets/RiceReservoir.png" id="6_w48qg"]
[ext_resource type="Texture2D" uid="uid://cogbwe1rhmfmf" path="res://Assets/SeaweedHolder.png" id="7_cegan"]
[ext_resource type="Script" uid="uid://dkhj6a3ew0wun" path="res://cuttingMinigame.gd" id="7_efxa6"]
[ext_resource type="Script" uid="uid://y00fuog7pdhm" path="res://assembly.gd" id="7_kek77"]
[ext_resource type="Texture2D" uid="uid://doq02n40iwio7" path="res://Assets/CuttingBoardTable.png" id="7_ycdy4"]
[ext_resource type="Texture2D" uid="uid://c14luojaevyld" path="res://Assets/FishCooler.png" id="9_d13ii"]
[ext_resource type="Texture2D" uid="uid://cgvay8ebs1ypn" path="res://Assets/Fish.png" id="9_yaehf"]
[ext_resource type="Script" uid="uid://dvbj345dy3by1" path="res://camera.gd" id="10_4c57u"]
[ext_resource type="Texture2D" uid="uid://dp8lfrkwnyc38" path="res://Assets/Sliced Fish.png" id="10_074og"]
[ext_resource type="Texture2D" uid="uid://c788mt3wijsi7" path="res://Assets/Obliterated.png" id="11_cegan"]
[ext_resource type="PackedScene" uid="uid://ckbumgkfqrmoy" path="res://inventoryItems.tscn" id="11_dg77c"]
[ext_resource type="Texture2D" uid="uid://5pygkcvi0esp" path="res://Assets/AssemblyStation.png" id="14_074og"]
[ext_resource type="Texture2D" uid="uid://dxx1wx6tyv6tt" path="res://Assets/Knife.png" id="17_1u8w0"]
[ext_resource type="Texture2D" uid="uid://b3bkr5gdrogfa" path="res://Assets/Seaweed.png" id="18_ryguw"]
[ext_resource type="Texture2D" uid="uid://cb7rrbaf4c4h4" path="res://Assets/Onigiri.png" id="21_lswn8"]
[ext_resource type="Texture2D" uid="uid://cg6wd6etney0i" path="res://Assets/Sushi.png" id="22_a6jrf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xm2m"]
size = Vector2(122, 123)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_272bh"]
size = Vector2(74, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2yge"]
size = Vector2(123, 123)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(122, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_efxa6"]
size = Vector2(77.715, 203.852)

[sub_resource type="CircleShape2D" id="CircleShape2D_dg77c"]
radius = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7mycd"]
shader = ExtResource("5_lquwl")
shader_parameter/target_color = Color(1, 1, 1, 1)

[node name="Node2D" type="Node2D"]
position = Vector2(204, 83)
script = ExtResource("1_7mycd")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(323, 328)
script = ExtResource("1_0xm2m")

[node name="Icon" type="Sprite2D" parent="Player"]
texture = ExtResource("1_ig7tw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-2, 0.5)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="Area2D" type="Area2D" parent="Player"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2(-6, -28)
shape = SubResource("RectangleShape2D_272bh")

[node name="Stove" type="StaticBody2D" parent="."]
position = Vector2(141, 78)
script = ExtResource("4_5vw27")

[node name="Icon" type="Sprite2D" parent="Stove"]
scale = Vector2(0.49, 0.49)
texture = ExtResource("5_getpj")

[node name="RichTextLabel" type="RichTextLabel" parent="Stove/Icon"]
visible = false
offset_left = -41.0
offset_top = -46.0
offset_right = 59.0
offset_bottom = 25.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 31
text = "Stove"

[node name="Icon2" type="Sprite2D" parent="Stove"]
visible = false
scale = Vector2(0.49, 0.49)
texture = ExtResource("6_ryguw")

[node name="RichTextLabel" type="RichTextLabel" parent="Stove/Icon2"]
visible = false
offset_left = -41.0
offset_top = -46.0
offset_right = 59.0
offset_bottom = 25.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 31
text = "Stove"

[node name="ProgressBar" type="ProgressBar" parent="Stove/Icon2"]
offset_left = -118.0
offset_top = 24.0
offset_right = 117.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 26

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stove"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_h2yge")

[node name="Area2D" type="Area2D" parent="Stove"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stove/Area2D"]
position = Vector2(-1, 10)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="RichTextLabel" type="RichTextLabel" parent="Stove"]
offset_left = -58.0
offset_top = 29.0
offset_right = 59.0
offset_bottom = 59.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Place Rice"
horizontal_alignment = 1

[node name="Interactable" type="Sprite2D" parent="Stove"]
visible = false
position = Vector2(-0.999969, 17)
scale = Vector2(0.445, 0.445)
texture = ExtResource("1_ig7tw")

[node name="RichTextLabel" type="RichTextLabel" parent="Stove/Interactable"]
offset_left = -26.9663
offset_top = -47.1911
offset_right = 73.0337
offset_bottom = 54.8089
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 31
text = "Rice Pot"

[node name="Rice Reservoir" type="StaticBody2D" parent="."]
position = Vector2(-42, 76)
script = ExtResource("5_272bh")
item = "rice"

[node name="Icon" type="Sprite2D" parent="Rice Reservoir"]
scale = Vector2(0.485, 0.485)
texture = ExtResource("6_w48qg")

[node name="RichTextLabel" type="RichTextLabel" parent="Rice Reservoir/Icon"]
visible = false
offset_left = -41.0
offset_top = -46.0
offset_right = 59.0
offset_bottom = 25.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 31
text = "Rice"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rice Reservoir"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_h2yge")

[node name="Area2D" type="Area2D" parent="Rice Reservoir"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rice Reservoir/Area2D"]
position = Vector2(-1, 10)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="RichTextLabel" type="RichTextLabel" parent="Rice Reservoir"]
visible = false
offset_left = -37.0
offset_top = 3.0
offset_right = 60.0
offset_bottom = 43.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Grab Rice"

[node name="RichTextLabel2" type="RichTextLabel" parent="Rice Reservoir"]
offset_left = 17.0
offset_top = -18.0
offset_right = 57.0
offset_bottom = 22.0
text = "1"
horizontal_alignment = 2

[node name="Fish Reservoir" type="StaticBody2D" parent="."]
position = Vector2(655, 79)
script = ExtResource("5_272bh")
item = "fish"

[node name="Icon" type="Sprite2D" parent="Fish Reservoir"]
scale = Vector2(0.515, 0.515)
texture = ExtResource("9_d13ii")

[node name="RichTextLabel" type="RichTextLabel" parent="Fish Reservoir/Icon"]
visible = false
offset_left = -41.0
offset_top = -46.0
offset_right = 59.0
offset_bottom = 25.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 31
text = "Fish"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fish Reservoir"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_h2yge")

[node name="Area2D" type="Area2D" parent="Fish Reservoir"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fish Reservoir/Area2D"]
position = Vector2(-1, 10)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="RichTextLabel" type="RichTextLabel" parent="Fish Reservoir"]
visible = false
offset_left = -62.0
offset_top = 12.0
offset_right = 61.0
offset_bottom = 61.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Grab Fish"
horizontal_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="Fish Reservoir"]
offset_left = 21.0
offset_top = 40.0
offset_right = 61.0
offset_bottom = 80.0
text = "1"
horizontal_alignment = 2

[node name="Seaweed Reservoir" type="StaticBody2D" parent="."]
position = Vector2(818, 80)
script = ExtResource("5_272bh")
item = "seaweed"
stock = 3

[node name="Icon" type="Sprite2D" parent="Seaweed Reservoir"]
scale = Vector2(0.495, 0.495)
texture = ExtResource("7_cegan")

[node name="RichTextLabel" type="RichTextLabel" parent="Seaweed Reservoir/Icon"]
visible = false
offset_left = -58.0
offset_top = -46.0
offset_right = 66.0
offset_bottom = 25.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 27
text = "Seaweed"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Seaweed Reservoir"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_h2yge")

[node name="Area2D" type="Area2D" parent="Seaweed Reservoir"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Seaweed Reservoir/Area2D"]
position = Vector2(-1, 10)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="RichTextLabel" type="RichTextLabel" parent="Seaweed Reservoir"]
visible = false
offset_left = -59.0
offset_top = 11.0
offset_right = 59.0
offset_bottom = 60.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Grab Seaweed"
horizontal_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="Seaweed Reservoir"]
offset_left = 17.0
offset_top = -14.0
offset_right = 57.0
offset_bottom = 26.0
text = "1"
horizontal_alignment = 2

[node name="Cutting Board" type="StaticBody2D" parent="."]
texture_filter = 6
position = Vector2(489, 82)
script = ExtResource("6_4c57u")
item = "fish"

[node name="Icon" type="Sprite2D" parent="Cutting Board"]
scale = Vector2(0.49, 0.49)
texture = ExtResource("7_ycdy4")

[node name="RichTextLabel" type="RichTextLabel" parent="Cutting Board/Icon"]
visible = false
offset_left = -41.0
offset_top = -46.0
offset_right = 59.0
offset_bottom = 25.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 25
text = "Cutting Board"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cutting Board"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_h2yge")

[node name="Area2D" type="Area2D" parent="Cutting Board"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cutting Board/Area2D"]
position = Vector2(-1, 10)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="RichTextLabel" type="RichTextLabel" parent="Cutting Board"]
offset_left = -58.0
offset_top = 11.0
offset_right = 58.0
offset_bottom = 59.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Place Fish"
horizontal_alignment = 1

[node name="Area2D2" type="Area2D" parent="Cutting Board"]
position = Vector2(-1, -29)
scale = Vector2(0.21875, 0.210937)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cutting Board/Area2D2"]
position = Vector2(2.2854, 16.5926)
shape = SubResource("RectangleShape2D_efxa6")

[node name="Fish" type="Sprite2D" parent="Cutting Board"]
visible = false
position = Vector2(-0.99997, -29)
scale = Vector2(0.21875, 0.210937)
texture = ExtResource("9_yaehf")

[node name="RichTextLabel" type="RichTextLabel" parent="Cutting Board/Fish"]
visible = false
offset_left = -26.9663
offset_top = -47.1911
offset_right = 73.0337
offset_bottom = 54.8089
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 31
text = "Fish"

[node name="Sliced Fish" type="Sprite2D" parent="Cutting Board"]
visible = false
position = Vector2(-0.99997, -29)
scale = Vector2(0.21875, 0.210937)
texture = ExtResource("10_074og")

[node name="RichTextLabel" type="RichTextLabel" parent="Cutting Board/Sliced Fish"]
visible = false
offset_left = -26.9663
offset_top = -47.1911
offset_right = 73.0337
offset_bottom = 54.8089
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 31
text = "Fish"

[node name="Obliterated Fish" type="Sprite2D" parent="Cutting Board"]
visible = false
position = Vector2(-0.99997, -29)
scale = Vector2(0.21875, 0.210937)
texture = ExtResource("11_cegan")

[node name="RichTextLabel" type="RichTextLabel" parent="Cutting Board/Obliterated Fish"]
visible = false
offset_left = -26.9663
offset_top = -47.1911
offset_right = 73.0337
offset_bottom = 54.8089
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 31
text = "Fish"

[node name="MinigameHolder" type="Node2D" parent="Cutting Board"]
script = ExtResource("7_efxa6")

[node name="Knife" type="Node2D" parent="Cutting Board/MinigameHolder"]
z_index = 2
position = Vector2(47, -18)
rotation = 3.14159

[node name="Handle" type="Sprite2D" parent="Cutting Board/MinigameHolder/Knife"]
position = Vector2(0.345917, 6.00001)
rotation = 3.14159
scale = Vector2(0.146243, 0.228599)
texture = ExtResource("17_1u8w0")

[node name="Area2D" type="Area2D" parent="Cutting Board/MinigameHolder/Knife"]
position = Vector2(-6.59145e-05, 26)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cutting Board/MinigameHolder/Knife/Area2D"]
position = Vector2(1.07288e-06, 3.8147e-06)
shape = SubResource("CircleShape2D_dg77c")

[node name="Lines" type="Node2D" parent="Cutting Board/MinigameHolder"]

[node name="Line2D" type="Line2D" parent="Cutting Board/MinigameHolder/Lines"]
position = Vector2(-1, 7)
rotation = 3.14159
width = 0.635
joint_mode = 2

[node name="Assembly Board" type="StaticBody2D" parent="."]
position = Vector2(321, 84)
script = ExtResource("7_kek77")

[node name="Icon" type="Sprite2D" parent="Assembly Board"]
scale = Vector2(0.495, 0.495)
texture = ExtResource("14_074og")

[node name="RichTextLabel" type="RichTextLabel" parent="Assembly Board/Icon"]
visible = false
offset_left = -62.0
offset_top = -46.0
offset_right = 59.0
offset_bottom = 25.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 25
text = "Assembly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Assembly Board"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_h2yge")

[node name="Area2D" type="Area2D" parent="Assembly Board"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Assembly Board/Area2D"]
position = Vector2(-1, 10)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="RichTextLabel" type="RichTextLabel" parent="Assembly Board"]
visible = false
z_index = 7
offset_left = -59.0
offset_top = 11.0
offset_right = 59.0
offset_bottom = 59.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Place Seaweed"
horizontal_alignment = 1

[node name="Seaweed" type="Sprite2D" parent="Assembly Board"]
visible = false
position = Vector2(-0.500013, -25.5)
rotation = -0.120428
scale = Vector2(0.292969, 0.269531)
texture = ExtResource("18_ryguw")

[node name="RichTextLabel" type="RichTextLabel" parent="Assembly Board/Seaweed"]
visible = false
offset_left = -26.9663
offset_top = -47.1911
offset_right = 73.0337
offset_bottom = 54.8089
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 31
text = "Seaweed"

[node name="Onigiri" type="Sprite2D" parent="Assembly Board"]
visible = false
position = Vector2(2.99997, -41)
scale = Vector2(0.21875, 0.207031)
texture = ExtResource("21_lswn8")

[node name="RichTextLabel" type="RichTextLabel" parent="Assembly Board/Onigiri"]
visible = false
offset_left = -26.9663
offset_top = -47.1911
offset_right = 73.0337
offset_bottom = 54.8089
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 31
text = "Onigiri"

[node name="Sushi" type="Sprite2D" parent="Assembly Board"]
visible = false
position = Vector2(4.49998, -38.5)
scale = Vector2(0.269531, 0.207031)
texture = ExtResource("22_a6jrf")

[node name="RichTextLabel" type="RichTextLabel" parent="Assembly Board/Sushi"]
visible = false
offset_left = -26.9663
offset_top = -47.1911
offset_right = 73.0337
offset_bottom = 54.8089
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 31
text = "Sushi"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="1" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(537.56, 748.12)
scale = Vector2(0.26, 0.26)
texture = ExtResource("4_1bvp3")

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/1"]
offset_left = 105.538
offset_top = 97.8461
offset_right = 205.538
offset_bottom = 199.846
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 31
text = "1"
metadata/_edit_use_anchors_ = true

[node name="Outline" type="Sprite2D" parent="CanvasLayer/1"]
visible = false
z_index = -1
material = SubResource("ShaderMaterial_7mycd")
scale = Vector2(1.055, 1.055)
texture = ExtResource("4_1bvp3")

[node name="Items" parent="CanvasLayer/1" instance=ExtResource("11_dg77c")]

[node name="2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(642, 747.56)
scale = Vector2(0.26, 0.26)
texture = ExtResource("4_1bvp3")

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/2"]
offset_left = 105.538
offset_top = 97.8461
offset_right = 205.538
offset_bottom = 199.846
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 31
text = "2"

[node name="Outline" type="Sprite2D" parent="CanvasLayer/2"]
visible = false
z_index = -1
material = SubResource("ShaderMaterial_7mycd")
scale = Vector2(1.055, 1.055)
texture = ExtResource("4_1bvp3")

[node name="Items" parent="CanvasLayer/2" instance=ExtResource("11_dg77c")]

[node name="3" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(745, 749.56)
scale = Vector2(0.26, 0.26)
texture = ExtResource("4_1bvp3")

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/3"]
offset_left = 105.538
offset_top = 97.8461
offset_right = 205.538
offset_bottom = 199.846
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 31
text = "3"

[node name="Outline" type="Sprite2D" parent="CanvasLayer/3"]
visible = false
z_index = -1
material = SubResource("ShaderMaterial_7mycd")
scale = Vector2(1.055, 1.055)
texture = ExtResource("4_1bvp3")

[node name="Items" parent="CanvasLayer/3" instance=ExtResource("11_dg77c")]

[node name="4" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(850, 751)
scale = Vector2(0.26, 0.26)
texture = ExtResource("4_1bvp3")

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/4"]
offset_left = 105.538
offset_top = 97.8461
offset_right = 205.538
offset_bottom = 199.846
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 31
text = "4"

[node name="Outline" type="Sprite2D" parent="CanvasLayer/4"]
visible = false
z_index = -1
material = SubResource("ShaderMaterial_7mycd")
scale = Vector2(1.055, 1.055)
texture = ExtResource("4_1bvp3")

[node name="Items" parent="CanvasLayer/4" instance=ExtResource("11_dg77c")]

[node name="5" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(958, 751)
scale = Vector2(0.26, 0.26)
texture = ExtResource("4_1bvp3")

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/5"]
offset_left = 105.538
offset_top = 97.8461
offset_right = 205.538
offset_bottom = 199.846
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 31
text = "5"

[node name="Outline" type="Sprite2D" parent="CanvasLayer/5"]
visible = false
z_index = -1
material = SubResource("ShaderMaterial_7mycd")
scale = Vector2(1.055, 1.055)
texture = ExtResource("4_1bvp3")

[node name="Items" parent="CanvasLayer/5" instance=ExtResource("11_dg77c")]

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
script = ExtResource("10_4c57u")

[node name="Icon" type="Sprite2D" parent="."]
z_index = -4
position = Vector2(362, 267)
scale = Vector2(16.1719, 12.75)
texture = ExtResource("1_ig7tw")

[node name="RichTextLabel" type="RichTextLabel" parent="Icon"]
offset_left = -19.6638
offset_top = -9.72549
offset_right = 56.3362
offset_bottom = 48.2745
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Floor"
fit_content = true

[node name="MinigameLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Button" type="Button" parent="MinigameLayer"]
modulate = Color(1, 1, 1, 0)
offset_left = 26.0
offset_top = 23.0
offset_right = 234.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 22
text = "Finish Cutting"

[connection signal="area_entered" from="Stove/Area2D" to="Stove" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Stove/Area2D" to="Stove" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="Rice Reservoir/Area2D" to="Rice Reservoir" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Rice Reservoir/Area2D" to="Rice Reservoir" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="Fish Reservoir/Area2D" to="Fish Reservoir" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Fish Reservoir/Area2D" to="Fish Reservoir" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="Seaweed Reservoir/Area2D" to="Seaweed Reservoir" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Seaweed Reservoir/Area2D" to="Seaweed Reservoir" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="Cutting Board/Area2D" to="Cutting Board" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Cutting Board/Area2D" to="Cutting Board" method="_on_area_2d_area_exited"]
[connection signal="area_shape_entered" from="Cutting Board/MinigameHolder/Knife/Area2D" to="Cutting Board/MinigameHolder" method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="Cutting Board/MinigameHolder/Knife/Area2D" to="Cutting Board/MinigameHolder" method="_on_area_2d_area_shape_exited"]
[connection signal="area_entered" from="Assembly Board/Area2D" to="Assembly Board" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Assembly Board/Area2D" to="Assembly Board" method="_on_area_2d_area_exited"]
[connection signal="pressed" from="MinigameLayer/Button" to="Cutting Board" method="_on_button_pressed"]
